// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test function getSmartLinksTargetFromPrompt Check credentials (BAS) Destination found (NoAuthentication) - ask for credentials 1`] = `
Array [
  Object {
    "message": "[36mUsername[39m",
    "name": "username",
    "type": "text",
    "validate": [Function],
  },
  Object {
    "message": "[36mPassword[39m",
    "name": "password",
    "type": "invisible",
    "validate": [Function],
  },
]
`;

exports[`Test function getSmartLinksTargetFromPrompt Check credentials (BAS) Destination not found - ask for credentials 1`] = `
Array [
  Object {
    "message": "[36mUsername[39m",
    "name": "username",
    "type": "text",
    "validate": [Function],
  },
  Object {
    "message": "[36mPassword[39m",
    "name": "password",
    "type": "invisible",
    "validate": [Function],
  },
]
`;

exports[`Test function getSmartLinksTargetFromPrompt Check credentials (local) No stored credentials 1`] = `
Array [
  Object {
    "message": "[36mUsername[39m",
    "name": "username",
    "type": "text",
    "validate": [Function],
  },
  Object {
    "message": "[36mPassword[39m",
    "name": "password",
    "type": "invisible",
    "validate": [Function],
  },
]
`;

exports[`Test function getSmartLinksTargetFromPrompt Check credentials (local) Stored credentials 1`] = `
Array [
  Object {
    "choices": Array [
      Object {
        "title": "Use mockUser",
        "value": Object {
          "password": "mockPW",
          "username": "mockUser",
        },
      },
      Object {
        "title": "Provide username and password",
        "value": false,
      },
    ],
    "initial": 0,
    "message": "Credentials to be used",
    "name": "credentials",
    "type": "select",
  },
]
`;

exports[`Test function getSmartLinksTargetFromPrompt Prompt for destination on BAS:  Existing ui5-deploy-config 1`] = `
Array [
  Object {
    "initial": "ABC123",
    "message": "SmartLinks configuration source destination (ui5-deploy.yaml)",
    "name": "destination",
    "type": "text",
    "validate": [Function],
  },
]
`;

exports[`Test function getSmartLinksTargetFromPrompt Prompt for destination on BAS:  No ui5-deploy config 1`] = `
Array [
  Object {
    "initial": undefined,
    "message": "SmartLinks configuration source destination ",
    "name": "destination",
    "type": "text",
    "validate": [Function],
  },
]
`;

exports[`Test function getSmartLinksTargetFromPrompt Prompt for target url and client:  Existing ui5-deploy-config 1`] = `
Array [
  Object {
    "initial": "https://abc.abap.stagingaws.hanavlab.ondemand.com",
    "message": "SmartLinks configuration source url (ui5-deploy.yaml)",
    "name": "url",
    "type": "text",
    "validate": [Function],
  },
  Object {
    "format": [Function],
    "initial": 100,
    "message": "SAP client (ui5-deploy.yaml)",
    "name": "client",
    "type": "text",
  },
]
`;

exports[`Test function getSmartLinksTargetFromPrompt Prompt for target url and client:  No ui5-deploy config 1`] = `
Array [
  Object {
    "initial": undefined,
    "message": "SmartLinks configuration source url ",
    "name": "url",
    "type": "text",
    "validate": [Function],
  },
  Object {
    "format": [Function],
    "initial": undefined,
    "message": "SAP client ",
    "name": "client",
    "type": "text",
  },
]
`;

exports[`Test function getSmartLinksTargetFromPrompt Return prompt values Target and credentials provided 1`] = `
Object {
  "auth": Object {
    "password": "mockPW",
    "username": "mockUser",
  },
  "ignoreCertErrors": undefined,
  "target": Object {
    "client": "mockClient",
    "destination": undefined,
    "url": "mockUrl",
  },
}
`;
